okf/products/scalardl/3.14/scalardl-auditor-status-codes.md
---
type: Troubleshooting
title: ScalarDL Auditor Error Codes
description: This page provides a list of error codes in ScalarDL Auditor.
resource: https://scalardl.scalar-labs.com/docs/latest/scalardl-auditor-status-codes/
tags:
- scalardl
- v3.14
- phase:operate
- edition:enterprise
status: stable
product: scalardl
product_title: ScalarDL
version: '3.14'
patch_version: 3.14.0
doc_id: scalardl-auditor-status-codes
lifecycle_phase: operate
editions:
- Enterprise
generated:
  by: process:okf-build/1.0.0
  at: '2026-08-24T00:15:41Z'
sources:
- id: docs-scalardl
  resource: https://github.com/scalar-labs/docs-scalardl/blob/db1535c35d0f746c5b5d8d9772f54afa0c709a34/docs/scalardl-auditor-status-codes.mdx
  title: ScalarDL documentation source (MDX)
  author: process:scalar-labs/docs-scalardl
  last_modified: '2026-08-20T15:35:18Z'
---

# ScalarDL Auditor Error Codes

This page provides a list of error codes in ScalarDL Auditor.

## Error code classes and descriptions

| Class              | Description                              |
|:-------------------|:-----------------------------------------|
| `DL-AUDITOR-3xxxx` | Errors for the validation error category |
| `DL-AUDITOR-4xxxx` | Errors for the user error category       |
| `DL-AUDITOR-5xxxx` | Errors for the internal error category   |

## `DL-AUDITOR-3xxxx` status codes

The following are status codes and messages for the validation error category.

### `DL-AUDITOR-304001`

**Message**

```markdown
The nonce has already been used.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305001`

**Message**

```markdown
The request has been tampered with.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305002`

**Message**

```markdown
The specified asset proof doesn't exist in Ledger.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305003`

**Message**

```markdown
The specified request proof doesn't exist.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305004`

**Message**

```markdown
Hash validation failed.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305005`

**Message**

```markdown
The specified lock entry doesn't exist. A bug might exist, or tampering might have occurred.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305006`

**Message**

```markdown
An invalid asset proof is given. Namespace: %s; Asset ID: %s
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305007`

**Message**

```markdown
The expected asset record doesn't exist.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305008`

**Message**

```markdown
The specified asset and the asset lock are inconsistent.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305009`

**Message**

```markdown
The specified lock type is not supported. Type: %s
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305010`

**Message**

```markdown
readUnlock is used for unlocked or write-locked assets.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

### `DL-AUDITOR-305011`

**Message**

```markdown
writeUnlock is used for unlocked or read-locked assets.
```

**Solution**

```markdown
Data or program tampering, or a software bug, may have occurred. Contact your system administrator to check for any signs of malicious activity.
```

## `DL-AUDITOR-4xxxx` status codes

The following are status codes and messages for the user error category.

### `DL-AUDITOR-407001`

**Message**

```markdown
The lock must be validated before it can be released.
```

**Solution**

```markdown
Validate the lock before attempting to release it.
```

### `DL-AUDITOR-407002`

**Message**

```markdown
Transaction state purge is disabled.
```

**Solution**

```markdown
Set 'scalar.dl.auditor.transaction_state_purge.enabled' to true in the Auditor configuration (for example, auditor.properties) and restart Auditor to allow purge.
```

### `DL-AUDITOR-409001`

**Message**

```markdown
The specified asset is not found.
```

**Solution**

```markdown
Verify the asset ID and namespace are correct and the asset has been created.
```

### `DL-AUDITOR-414001`

**Message**

```markdown
%s must be set if HMAC authentication is used.
```

**Solution**

```markdown
Set 'scalar.dl.auditor.authentication.hmac.cipher_key' in the Auditor configuration file (e.g., auditor.properties). Use an unpredictable and long value for security.
```

### `DL-AUDITOR-414002`

**Message**

```markdown
Authentication between Ledger and Auditor is not correctly configured. Set %s along with a private key with %s or %s if you use digital signature authentication.
```

**Solution**

```markdown
For digital signature authentication, set these properties in auditor.properties: 'scalar.dl.auditor.cert_holder_id' and either 'scalar.dl.auditor.private_key_path' (path to PEM file) or 'scalar.dl.auditor.private_key_pem' (PEM-encoded data). Ensure the authentication method matches the Ledger configuration.
```

### `DL-AUDITOR-414003`

**Message**

```markdown
Authentication between Ledger and Auditor is not correctly configured. Set %s if you use HMAC authentication.
```

**Solution**

```markdown
For HMAC authentication between Ledger and Auditor, set 'scalar.dl.auditor.servers.authentication.hmac.secret_key' in auditor.properties with a shared secret. This must match the Ledger's corresponding HMAC secret key.
```

### `DL-AUDITOR-414004`

**Message**

```markdown
Transaction state purge is enabled, but the request proof table schema is too old to support it. With this schema, request proofs are stored in a legacy format that can never be purged, so they would accumulate indefinitely.
```

**Solution**

```markdown
Upgrade the request proof table schema to the version that supports transaction state purge and restart Auditor. Alternatively, disable transaction state purge by setting 'scalar.dl.auditor.transaction_state_purge.enabled' to false in the Auditor configuration (for example, auditor.properties).
```

## `DL-AUDITOR-5xxxx` status codes

The following are status codes and messages for the internal error category.

### `DL-AUDITOR-500001`

**Message**

```markdown
Binding the request proof failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500002`

**Message**

```markdown
Getting the request proof failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500003`

**Message**

```markdown
Binding the asset record failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500004`

**Message**

```markdown
Retrieving the asset records failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500005`

**Message**

```markdown
Getting the asset lock failed. Namespace: %s; Asset ID: %s; Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500006`

**Message**

```markdown
Deleting the request proof failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500007`

**Message**

```markdown
Scanning request proofs failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-500008`

**Message**

```markdown
Getting the request proof table metadata failed. Details: %s
```

**Solution**

```markdown
Check the error details in the logs and verify your database configuration and connection.
```

### `DL-AUDITOR-503001`

**Message**

```markdown
Calling Ledger failed. Status code: %s; Details: %s
```

**Solution**

```markdown
Ledger may be temporarily unavailable. Check the error details in the logs, the availability of Ledger, and the connection and authentication settings between Ledger and Auditor.
```

### `DL-AUDITOR-504001`

**Message**

```markdown
The specified lock entry is currently held by a writer.
```

**Solution**

```markdown
Retry the operation.
```

### `DL-AUDITOR-504002`

**Message**

```markdown
The specified asset record is in use.
```

**Solution**

```markdown
Retry the operation.
```

### `DL-AUDITOR-504003`

**Message**

```markdown
The entry has already been recovered, or an issue might have occurred.
```

**Solution**

```markdown
Retry the operation. Contact your system administrator to check for any signs of malicious activity if the issue persists.
```

### `DL-AUDITOR-504004`

**Message**

```markdown
Another transaction state purge is already in progress.
```

**Solution**

```markdown
Retry the operation after the current purge completes.
```
